force-app/main/default/objects/Fund_Quarterly_Object__c/Fund_Quarterly_Object__c.object-meta.xml
<CustomObject>
    <label>Fund Quarterly Object</label>
    <nameField>
        <displayFormat>FQ-{0000000}</displayFormat>
        <label>Fund Quarterly Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Quarterly Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>