force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AdminInvestBuildingPool__c.field-meta.xml
<CustomField>
    <fullName>AdminInvestBuildingPool__c</fullName>
    <label>Building Pool</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>