force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AdminInvestEndowPool__c.field-meta.xml
<CustomField>
    <fullName>AdminInvestEndowPool__c</fullName>
    <label>Endowment Pool</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>