force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AlBldgBeg__c.field-meta.xml
<CustomField>
    <fullName>AlBldgBeg__c</fullName>
    <label>Al BldgBeg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>