force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AlBldgEarn__c.field-meta.xml
<CustomField>
    <fullName>AlBldgEarn__c</fullName>
    <label>Al Bldg Earn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>