force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AlBldgEnd__c.field-meta.xml
<CustomField>
    <fullName>AlBldgEnd__c</fullName>
    <label>Al BldgEnd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>