force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AlEndBeg__c.field-meta.xml
<CustomField>
    <fullName>AlEndBeg__c</fullName>
    <label>Al EndBeg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>