force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AlEndEnd__c.field-meta.xml
<CustomField>
    <fullName>AlEndEnd__c</fullName>
    <label>Al EndEnd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>