force-app/main/default/objects/Fund_Quarterly_Object__c/fields/AllnvGainLoss__c.field-meta.xml
<CustomField>
    <fullName>AllnvGainLoss__c</fullName>
    <label>Al Gain Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>