force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndEndFHIT__c.field-meta.xml
<CustomField>
    <fullName>EndEndFHIT__c</fullName>
    <label>END FHIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>