force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndEndPldgReceivable__c.field-meta.xml
<CustomField>
    <fullName>EndEndPldgReceivable__c</fullName>
    <label>Pledge Receivables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>