force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndEndValue__c.field-meta.xml
<CustomField>
    <fullName>EndEndValue__c</fullName>
    <label>Ending Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>