force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndExpenses__c.field-meta.xml
<CustomField>
    <fullName>EndExpenses__c</fullName>
    <label>Spent Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>