force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndGifts__c.field-meta.xml
<CustomField>
    <fullName>EndGifts__c</fullName>
    <label>Contribution Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>