force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndInvestReturn__c.field-meta.xml
<CustomField>
    <fullName>EndInvestReturn__c</fullName>
    <label>Earnings Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>