force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndOpenFHIT__c.field-meta.xml
<CustomField>
    <fullName>EndOpenFHIT__c</fullName>
    <label>Open FHIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>