force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndOpenValue__c.field-meta.xml
<CustomField>
    <fullName>EndOpenValue__c</fullName>
    <label>Beginning Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>