force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndOther__c.field-meta.xml
<CustomField>
    <fullName>EndOther__c</fullName>
    <label>End Other Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>