force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndOtherEarnings__c.field-meta.xml
<CustomField>
    <fullName>EndOtherEarnings__c</fullName>
    <label>Other Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>