force-app/main/default/objects/Fund_Quarterly_Object__c/fields/EndSpentonFees__c.field-meta.xml
<CustomField>
    <fullName>EndSpentonFees__c</fullName>
    <label>Administrative Fee Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>