force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpEndEstateReceivable__c.field-meta.xml
<CustomField>
    <fullName>ExpEndEstateReceivable__c</fullName>
    <label>ExpEnd State Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>