force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpEndFHIT__c.field-meta.xml
<CustomField>
    <fullName>ExpEndFHIT__c</fullName>
    <label>ExpEndFHIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>