force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpEndPldgReceivable__c.field-meta.xml
<CustomField>
    <fullName>ExpEndPldgReceivable__c</fullName>
    <label>Expense Pledge Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>