force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpEndValue__c.field-meta.xml
<CustomField>
    <fullName>ExpEndValue__c</fullName>
    <label>Ending Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>