force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpEndValue_Cash__c.field-meta.xml
<CustomField>
    <fullName>ExpEndValue_Cash__c</fullName>
    <label>End Value Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>