force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpEndValue_noncash__c.field-meta.xml
<CustomField>
    <fullName>ExpEndValue_noncash__c</fullName>
    <label>End value Non-Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>