force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpExenses__c.field-meta.xml
<CustomField>
    <fullName>ExpExenses__c</fullName>
    <label>Spent Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>