force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpGifts__c.field-meta.xml
<CustomField>
    <fullName>ExpGifts__c</fullName>
    <label>Contribution Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>