force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpGifts_GIK__c.field-meta.xml
<CustomField>
    <fullName>ExpGifts_GIK__c</fullName>
    <label>ExpGifts GIK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>