force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpGifts_nonGIK__c.field-meta.xml
<CustomField>
    <fullName>ExpGifts_nonGIK__c</fullName>
    <label>Gifts Non-GIK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>