force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpMadeAvailSpend__c.field-meta.xml
<CustomField>
    <fullName>ExpMadeAvailSpend__c</fullName>
    <label>Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>