force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpOpenBalance__c.field-meta.xml
<CustomField>
    <fullName>ExpOpenBalance__c</fullName>
    <label>Beginning Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>