force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpOpenBalance_noncash__c.field-meta.xml
<CustomField>
    <fullName>ExpOpenBalance_noncash__c</fullName>
    <label>Open Non-Cash Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>