force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpOpenFHIT__c.field-meta.xml
<CustomField>
    <fullName>ExpOpenFHIT__c</fullName>
    <label>ExpOpenFHIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>