force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpOther__c.field-meta.xml
<CustomField>
    <fullName>ExpOther__c</fullName>
    <label>Expense Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>