force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpOtherEarnings__c.field-meta.xml
<CustomField>
    <fullName>ExpOtherEarnings__c</fullName>
    <label>Expense Other Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>