force-app/main/default/objects/Fund_Quarterly_Object__c/fields/ExpSpentonFees__c.field-meta.xml
<CustomField>
    <fullName>ExpSpentonFees__c</fullName>
    <label>Administrative Fee Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>