force-app/main/default/objects/Fund_Quarterly_Object__c/fields/FHITendgainloss__c.field-meta.xml
<CustomField>
    <fullName>FHITendgainloss__c</fullName>
    <label>FHIT End Gain Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>