force-app/main/default/objects/Fund_Quarterly_Object__c/fields/FHITEndIncome__c.field-meta.xml
<CustomField>
    <fullName>FHITEndIncome__c</fullName>
    <label>FHIT End Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>