force-app/main/default/objects/Fund_Quarterly_Object__c/fields/FHITexpGainLoss__c.field-meta.xml
<CustomField>
    <fullName>FHITexpGainLoss__c</fullName>
    <label>FHITexpGainLoss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>