force-app/main/default/objects/Fund_Quarterly_Object__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>A concatenating of project,FY and quarter to determine uniqueness for an upsert</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>