force-app/main/default/objects/Fund_Quarterly_Object__c/fields/No_Spending_Report_Qualify__c.field-meta.xml
<CustomField>
    <fullName>No_Spending_Report_Qualify__c</fullName>
    <formula>OR(  EndOpenValue__c &lt;&gt; 0 , EndInvestReturn__c &lt;&gt; 0 ,  EndOtherEarnings__c &lt;&gt; 0 ,  EndExpenses__c &lt;&gt; 0 ,  EndMadeAvailSpend__c &lt;&gt; 0 ,  EndSpentonFees__c &lt;&gt; 0 ,  EndOther__c &lt;&gt; 0 ,  EndEndPldgReceivable__c &lt;&gt; 0 ,  EndEndValue__c &lt;&gt; 0 ,  ExpOpenBalance__c &lt;&gt; 0 ,  ExpMadeAvailSpend__c &lt;&gt; 0 ,  ExpOtherEarnings__c &lt;&gt; 0 ,  ExpExenses__c &lt;&gt; 0 ,  ExpOther__c &lt;&gt; 0 ,  ExpSpentonFees__c &lt;&gt; 0 ,  ExpEndPldgReceivable__c &lt;&gt; 0 ,  ExpEndValue__c &lt;&gt; 0 ,  EndGifts__c &lt;&gt; 0 ,  ExpGifts__c &lt;&gt; 0 ,  EndOpenFHIT__c &lt;&gt; 0 ,  ExpOpenFHIT__c &lt;&gt; 0 ,  EndEndFHIT__c &lt;&gt; 0 ,  ExpEndFHIT__c &lt;&gt; 0 ,  AlEndBeg__c &lt;&gt; 0 ,  AlEndEnd__c &lt;&gt; 0 ,  AlBldgBeg__c &lt;&gt; 0 ,  AlBldgEnd__c &lt;&gt; 0 ,  AllnvGainLoss__c &lt;&gt; 0 ,  AlBldgEarn__c &lt;&gt; 0 ,  FHITexpincome__c &lt;&gt; 0 ,  FHITendgainloss__c &lt;&gt; 0 ,  FHITexpGainLoss__c &lt;&gt; 0 ,  FHITEndIncome__c &lt;&gt; 0)</formula>
    <label>No Spending Report Qualify</label>
    <type>Checkbox</type>
</CustomField>