force-app/main/default/objects/Fund_Quarterly_Object__c/fields/Other_Cash__c.field-meta.xml
<CustomField>
    <fullName>Other_Cash__c</fullName>
    <formula>ExpOther__c + ExpOtherEarnings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>