force-app/main/default/objects/Fund_Quarterly_Object__c/fields/OtherPrincipal__c.field-meta.xml
<CustomField>
    <fullName>OtherPrincipal__c</fullName>
    <description>field was discussed by Caitlin, mike, Cameron and if this on 8/12/2022 if this obviously wrong field causes no issues with annual reporting delete it later.</description>
    <formula>EndOther__c + EndOtherEarnings__c -  FHITEndIncome__c -  FHITendgainloss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>