force-app/main/default/objects/Fund_Quarterly_Object__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Fund Quarterly Object</relationshipLabel>
    <relationshipName>Fund_Quarterly_Object</relationshipName>
    <type>Lookup</type>
</CustomField>