force-app/main/default/objects/Fund_Quarterly_Object__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Fiscal Quarter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>